--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,7 +7,9 @@ body {
 }
 .container {
   display: grid;
-  grid-template-areas: "navbar";
+  grid-template-areas:
+    "navbar"
+    "section";
 }
 
 /*APARTADO BARRA DE NAVEGACIÓN*/
@@ -78,4 +80,15 @@ body {
   text-transform: uppercase;
   font-size: 1.5rem;
   width: max-content;
+}
+/*APARTADO SECTION GALERÍA*/
+
+.section {
+  grid-area: section;
+  margin-top: 400px;
+}
+.section__title {
+  text-align: center;
+  font-weight: 700;
+  font-size: 1.8rem;
 }
