--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -68,7 +68,7 @@ body {
   top: 100%;
   transition: all ease-in-out 0.3s;
   left: -100%;
-  border-radius: 0 0 20px 0;
+  border-radius: 0 20px 20px 0;
 }
 .navbar__links:target {
   left: 0%;
@@ -91,4 +91,42 @@ body {
   text-align: center;
   font-weight: 700;
   font-size: 1.8rem;
+}
+.card__body{
+  width: 90%;
+  margin: 0 auto;
+  border-radius: 10px;
+  border: 1px solid gray;
+  overflow: hidden;
+  max-width: 500px;
+}
+.card__img{
+  width: 100%;
+}
+.card__title{
+  text-align: center;
+  margin: 15px 0;
+}
+.card__description{
+  text-align: center;
+  padding: 10px 0;
+}
+.card__direction{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  padding: 20px 0;
+}
+.card__info{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  padding: 20px 0;
+}
+.card__price{
+  font-size: 1.5rem;
+  text-align: center;
+  margin-bottom: 20px;
 }
