--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -28,6 +28,7 @@ body {
   width: 100%;
   position: fixed;
   width: 100%;
+  background-color: #000000c2;
 }
 .nabvar__img {
   position: absolute;
