--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -94,7 +94,7 @@ body {
   font-weight: 700;
   font-size: 1.8rem;
 }
-.card__body__container{
+.card__body__container {
   width: 90%;
   margin: 40px auto;
   border-radius: 10px;
@@ -103,55 +103,67 @@ body {
   max-width: 450px;
   min-width: 300px;
 }
-.card__body{
-  padding: 10px;
+.card__body {
+  padding: 10px 10px 30px;
 }
-.card__img{
+.card__img {
   width: 100%;
 }
-.card__title{
+.card__title {
   text-align: center;
   margin: 15px 0;
 }
-.card__description{
+.card__description {
   text-align: center;
   padding: 10px 0;
 }
-.card__direction{
+.card__direction {
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 10px;
   padding: 20px 0;
 }
-.card__info{
+.card__info {
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 10px;
   padding: 20px 0;
 }
-.card__price{
+.card__price {
   font-size: 1.5rem;
   text-align: center;
   margin-bottom: 20px;
 }
-.card__inportant__info__container{
+.card__inportant__info__container {
   flex-direction: column;
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 10px;
 }
-.card__inportant__info{
+.card__inportant__info {
   display: flex;
   align-items: center;
   gap: 10px;
 }
-.card__inportant__info__text{
+.card__inportant__info__text {
   color: #ff0000;
 }
 .card__inportant__info__text--smooking,
-.card__inportant__info__text--pets{
+.card__inportant__info__text--pets {
   color: #008000;
+}
+.card__section__link {
+  display: flex;
+  width: max-content;
+  margin: 0 auto;
+  color: #fff;
+  background-color: #000;
+  text-decoration: none;
+  padding: 10px 30px;
+  border-radius: 5px;
+  font-size: 1.2rem;
+  margin-bottom: 20px;
 }
