--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -32,6 +32,7 @@ body {
 }
 .nabvar__img {
   position: absolute;
+  object-fit: cover;
   width: 100%;
   height: 450px;
 }
@@ -68,7 +69,7 @@ body {
   height: 40vh;
   width: 50%;
   top: 100%;
-  transition: all ease-in-out 0.3s;
+  transition: left ease-in-out 0.3s;
   left: -100%;
   border-radius: 0 20px 20px 0;
 }
@@ -170,4 +171,62 @@ body {
   border-radius: 5px;
   font-size: 1.2rem;
   margin-bottom: 20px;
+}
+
+/*APARTADO VERSIÓN ESCRITORIO*/
+@media (min-width: 576px) {
+  .navbar__container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    background-color: #000000c2;
+    padding: 20px 50px;
+  }
+  .nabvar__img {
+    position: absolute;
+    width: 100%;
+    height: 450px;
+    object-fit: cover;
+  }
+  .navbar__icons {
+    display: none;
+  }
+  .navbar__links {
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    left: 0;
+    gap: 20px;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    background-color: transparent;
+    transition: none;
+    width: max-content;
+  }
+  .nabvar__link:hover {
+    color: #ff0000;
+    font-weight: 700;
+  }
+  .section {
+    width: 80%;
+    margin: 0 auto;
+  }
+  .section__forsale {
+    margin-top: 500px;
+  }
+  .cards__container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    align-items: center;
+    gap: 60px;
+  }
+  .card__img {
+    height: 300px;
+    object-fit: cover;
+  }
+  .card__body__container {
+    height: 750px;
+  }
 }
