--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -69,7 +69,7 @@ body {
   height: 40vh;
   width: 50%;
   top: 100%;
-  transition: left ease-in-out 0.3s;
+  transition: all ease-in-out 0.3s;
   left: -100%;
   border-radius: 0 20px 20px 0;
 }
@@ -206,8 +206,7 @@ body {
     width: max-content;
   }
   .nabvar__link:hover {
-    color: #ff0000;
-    font-weight: 700;
+    opacity: 80%;
   }
   .section {
     width: 80%;
