--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -31,12 +31,24 @@ body {
   position: fixed;
   width: 100%;
   background-color: #000000c2;
+  z-index: 20;
 }
 .nabvar__img {
   position: absolute;
   object-fit: cover;
   width: 100%;
   height: 450px;
+}
+.nabvar__img__title{
+  height: 50%;
+  width: 100%;
+  position: absolute;
+  z-index: 10;
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 1.5rem;
+  text-align: center;
+  top: 20%;
 }
 .navbar__title {
   color: #fff;
@@ -215,6 +227,18 @@ body {
     width: 100%;
     height: 450px;
     object-fit: cover;
+  }
+  .nabvar__img__title{
+    height: 50%;
+    width: 100%;
+    position: absolute;
+    z-index: 10;
+    color: #fff;
+    letter-spacing: 15px;
+    text-transform: uppercase;
+    font-size: 2rem;
+    text-align: center;
+    top: 20%;
   }
   .navbar__icons {
     display: none;
