--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -186,6 +186,9 @@ body {
   font-size: 1.2rem;
   margin-bottom: 20px;
 }
+.card__section__link:hover{
+background-color: #640404;
+}
 .separador{
   margin-bottom: 30px;
 }
